--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -197,11 +197,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
+"column": 45,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 125,
-"scroll_position": 0.0,
+"row": 104,
+"scroll_position": 104.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -423,11 +423,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 0.0,
-"selection": false,
+"row": 88,
+"scroll_position": 77.0,
+"selection": true,
+"selection_from_column": 9,
+"selection_from_line": 88,
+"selection_to_column": 13,
+"selection_to_line": 88,
 "syntax_highlighter": "GDScript"
 }
