--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 47,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 2.0,
-"selection": true,
-"selection_from_column": 13,
-"selection_from_line": 17,
-"selection_to_column": 20,
-"selection_to_line": 17,
+"row": 18,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -63,16 +59,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 60,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 20,
-"selection_to_column": 20,
-"selection_to_line": 20,
+"row": 22,
+"scroll_position": 14.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -169,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 132,
-"scroll_position": 125.0,
+"row": 301,
+"scroll_position": 278.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -215,11 +207,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([196]),
+"column": 30,
+"folded_lines": Array[int]([195]),
 "h_scroll_position": 0,
-"row": 795,
-"scroll_position": 780.0,
+"row": 267,
+"scroll_position": 255.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -335,11 +327,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 42,
-"folded_lines": Array[int]([109]),
+"column": 56,
+"folded_lines": Array[int]([106]),
 "h_scroll_position": 0,
-"row": 117,
-"scroll_position": 107.0,
+"row": 32,
+"scroll_position": 23.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -427,11 +419,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 55,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
+"row": 14,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
