--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://objects/character/player/player.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://components/chat_bubble/", "res://components/chat/", "res://classes/player_camera/", "res://assets/textures/prototype/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://autoloads/game_manager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://components/chat_bubble/", "res://components/chat/", "res://classes/player_camera/", "res://autoloads/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -36,8 +36,8 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://states/authentication/authentication.gd", "res://components/chat/chat.gd", "res://components/chat_bubble/chat_bubble.gd", "res://components/chat_bubble/chat_bubble_manager.gd", "res://states/game/game.gd", "res://main.gd", "res://classes/message/message.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd", "res://autoloads/signals.gd"]
-selected_script="res://components/chat_bubble/chat_bubble_manager.gd"
+open_scripts=["res://states/authentication/authentication.gd", "res://components/chat/chat.gd", "res://components/chat_bubble/chat_bubble.gd", "res://components/chat_bubble/chat_bubble_manager.gd", "res://states/game/game.gd", "res://autoloads/game_manager.gd", "res://main.gd", "res://classes/message/message.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd", "res://autoloads/signals.gd"]
+selected_script="res://states/game/game.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=75
