--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 47,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 0.0,
-"selection": false,
+"row": 12,
+"scroll_position": 1.0,
+"selection": true,
+"selection_from_column": 10,
+"selection_from_line": 12,
+"selection_to_column": 13,
+"selection_to_line": 12,
 "syntax_highlighter": "GDScript"
 }
 
@@ -31,11 +35,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
+"column": 38,
+"folded_lines": Array[int]([59, 80, 91, 114, 123]),
 "h_scroll_position": 0,
-"row": 13,
-"scroll_position": 9.0,
+"row": 134,
+"scroll_position": 75.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,10 +49,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 38,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -63,7 +67,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 22,
-"scroll_position": 14.0,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,12 +91,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 45,
+"column": 7,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 31,
-"scroll_position": 21.0,
-"selection": false,
+"row": 23,
+"scroll_position": 11.0,
+"selection": true,
+"selection_from_column": 7,
+"selection_from_line": 23,
+"selection_to_column": 27,
+"selection_to_line": 23,
 "syntax_highlighter": "GDScript"
 }
 
@@ -105,7 +113,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 133,
-"scroll_position": 0.0,
+"scroll_position": 133.0,
 "selection": true,
 "selection_from_column": 24,
 "selection_from_line": 133,
@@ -164,9 +172,13 @@ state={
 "column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 268,
-"scroll_position": 6.0,
-"selection": false,
+"row": 152,
+"scroll_position": 141.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 152,
+"selection_to_column": 30,
+"selection_to_line": 152,
 "syntax_highlighter": "GDScript"
 }
 
@@ -193,7 +205,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 136,
-"scroll_position": 104.0,
+"scroll_position": 122.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 0,
@@ -207,12 +219,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 56,
+"column": 54,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 0.0,
-"selection": false,
+"row": 234,
+"scroll_position": 223.0,
+"selection": true,
+"selection_from_column": 38,
+"selection_from_line": 234,
+"selection_to_column": 54,
+"selection_to_line": 234,
 "syntax_highlighter": "GDScript"
 }
 
@@ -327,12 +343,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 56,
+"column": 8,
 "folded_lines": Array[int]([106]),
 "h_scroll_position": 0,
-"row": 32,
-"scroll_position": 23.0,
-"selection": false,
+"row": 119,
+"scroll_position": 101.0,
+"selection": true,
+"selection_from_column": 8,
+"selection_from_line": 119,
+"selection_to_column": 36,
+"selection_to_line": 119,
 "syntax_highlighter": "GDScript"
 }
 
@@ -419,11 +439,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 54,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
+"row": 2,
+"scroll_position": 45.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
