--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -204,13 +204,9 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 136,
-"scroll_position": 122.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 136,
+"row": 30,
+"scroll_position": 23.3333,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -219,11 +215,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 785,
-"scroll_position": 778.0,
+"row": 233,
+"scroll_position": 222.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -435,15 +431,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
-"scroll_position": 70.0,
-"selection": true,
-"selection_from_column": 12,
-"selection_from_line": 2,
-"selection_to_column": 32,
-"selection_to_line": 2,
+"row": 3,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
