--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://classes/player_camera/player_camera.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/", "res://objects/characters/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://components/chat_bubble/", "res://components/chat/", "res://classes/", "res://assets/", "res://assets/textures/prototype/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://components/chat_bubble/chat_bubble.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/characters/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/escape_menu/game/", "res://components/chat_bubble/", "res://components/chat/", "res://classes/", "res://assets/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,17 +28,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://components/chat/chat.tscn", "res://components/chat_bubble/chat_bubble.tscn", "res://objects/character/player/player.tscn")
-current_scene="res://objects/character/player/player.tscn"
+open_scenes=PackedStringArray("res://components/chat/chat.tscn", "res://components/chat_bubble/chat_bubble.tscn", "res://objects/character/player/player.tscn", "res://components/chat_bubble/chat_bubble_manager.tscn")
+current_scene="res://components/chat_bubble/chat_bubble.tscn"
 center_split_offset=-214
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://components/chat/chat.gd", "res://states/game/game.gd", "res://main.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd"]
-selected_script="res://objects/character/player/player.gd"
+open_scripts=["res://components/chat/chat.gd", "res://components/chat_bubble/chat_bubble.gd", "res://components/chat_bubble/chat_bubble_manager.gd", "res://states/game/game.gd", "res://main.gd", "res://objects/character/player/player.gd", "res://classes/player_camera/player_camera.gd"]
+selected_script="res://components/chat_bubble/chat_bubble.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=75
