--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://components/tooltip/tooltip.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://themes/", "res://objects/characters/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/tooltip/", "res://components/escape_menu/game/", "res://components/chat_bubble/", "res://components/chat/", "res://assets/", "res://assets/textures/prototype/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://classes/player_states/unarmed_state.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/character/player/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://classes/", "res://classes/player_states/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -32,12 +32,12 @@ open_scenes=PackedStringArray("res://objects/character/player/player.tscn")
 current_scene="res://objects/character/player/player.tscn"
 center_split_offset=-214
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://autoloads/game_manager.gd", "res://main.gd", "res://objects/character/player/player.gd", "res://classes/player_states/state_manager.gd", "res://classes/player_states/player_state.gd", "res://classes/player_states/unarmed_state.gd"]
+selected_script="res://classes/player_states/state_manager.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=75
