--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -7,6 +7,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://classes/pathfinding/a_star_node.gd"
 }, {
+"base": &"Node",
+"class": &"BaseState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/player_state_machine/base_state.gd"
+}, {
 "base": &"RefCounted",
 "class": &"Cell",
 "icon": "",
@@ -38,6 +46,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://classes/player_camera/player_camera.gd"
+}, {
+"base": &"Node",
+"class": &"PlayerStateMachine",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/player_state_machine/player_state_machine.gd"
 }, {
 "base": &"RefCounted",
 "class": &"PriorityQueue",
