--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -10,15 +10,15 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=272
-dock_hsplit_3=-288
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://classes/player_state_machine/base_state.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/", "res://objects/character/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://classes/", "res://classes/player_state_machine/", "res://assets/textures/prototype/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://components/hud/top_right_hud.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/", "res://objects/character/", "res://maps/prototype/", "res://components/", "res://components/hud/", "res://components/escape_menu/game/", "res://classes/", "res://classes/player_state_machine/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,14 +30,15 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://objects/character/player/player.tscn")
 current_scene="res://objects/character/player/player.tscn"
-center_split_offset=-214
-selected_default_debugger_tab_idx=0
+center_split_offset=-197
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://objects/character/player/player.gd", "res://classes/player_state_machine/base_state.gd", "res://classes/player_state_machine/player_state_machine.gd"]
-selected_script="res://objects/character/player/player.gd"
+open_scripts=["res://classes/player_state_machine/base_state.gd", "res://classes/player_state_machine/idle_state.gd", "res://classes/player_state_machine/interact_state.gd", "res://classes/player_state_machine/move_state.gd", "res://objects/character/player/player.gd", "res://classes/player_state_machine/player_state_machine.gd"]
+selected_script="res://classes/player_state_machine/move_state.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=75
