--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -23,6 +23,22 @@ list=[{
 "language": &"GDScript",
 "path": "res://classes/pathfinding/cell.gd"
 }, {
+"base": &"BaseState",
+"class": &"IdleState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/player_state_machine/idle_state.gd"
+}, {
+"base": &"BaseState",
+"class": &"InteractState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/player_state_machine/interact_state.gd"
+}, {
 "base": &"StaticBody3D",
 "class": &"Interactable",
 "icon": "",
@@ -38,6 +54,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://classes/message/message.gd"
+}, {
+"base": &"BaseState",
+"class": &"MoveState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/player_state_machine/move_state.gd"
 }, {
 "base": &"Camera3D",
 "class": &"PlayerCamera",
