--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 57,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -87,16 +87,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 51,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 11.0,
-"selection": true,
-"selection_from_column": 7,
-"selection_from_line": 23,
-"selection_to_column": 27,
-"selection_to_line": 23,
+"row": 35,
+"scroll_position": 20.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -211,11 +207,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 79,
-"scroll_position": 67.0,
+"row": 688,
+"scroll_position": 680.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -239,16 +235,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 49,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
-"scroll_position": 6.0,
-"selection": true,
-"selection_from_column": 9,
-"selection_from_line": 13,
-"selection_to_column": 33,
-"selection_to_line": 13,
+"row": 34,
+"scroll_position": 27.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -441,12 +433,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
-"scroll_position": 45.0,
-"selection": false,
+"row": 75,
+"scroll_position": 60.0,
+"selection": true,
+"selection_from_column": 16,
+"selection_from_line": 75,
+"selection_to_column": 28,
+"selection_to_line": 75,
 "syntax_highlighter": "GDScript"
 }
 
@@ -455,10 +451,56 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 48,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 10,
+"scroll_position": 10.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/player_state_machine/idle_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 12,
+"selection_to_column": 39,
+"selection_to_line": 12,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/player_state_machine/move_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 5,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 16,
+"scroll_position": 7.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/player_state_machine/interact_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 24,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
