--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -33,11 +33,12 @@ current_scene="res://objects/character/player/player.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://classes/player_state_machine/base_state.gd", "res://classes/player_state_machine/idle_state.gd", "res://classes/player_state_machine/move_state.gd", "res://classes/player_state_machine/interact_state.gd", "res://objects/character/player/player.gd", "res://classes/player_state_machine/player_state_machine.gd", "res://autoloads/signals.gd"]
-selected_script="res://classes/player_state_machine/player_state_machine.gd"
+selected_script="res://classes/player_state_machine/move_state.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=75
