--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://autoloads/game_manager.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/", "res://objects/character/", "res://maps/prototype/", "res://components/", "res://components/hud/", "res://components/escape_menu/game/", "res://classes/", "res://classes/player_state_machine/", "res://autoloads/", "res://assets/textures/prototype/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://objects/character/player/player.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/hud/", "res://components/escape_menu/game/", "res://classes/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -36,7 +36,7 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://classes/player_state_machine/base_state.gd", "res://classes/player_state_machine/idle_state.gd", "res://classes/player_state_machine/move_state.gd", "res://classes/player_state_machine/interact_state.gd", "res://objects/character/player/player.gd", "res://classes/player_state_machine/player_state_machine.gd", "res://autoloads/signals.gd"]
+open_scripts=["res://classes/player_state_machine/base_state.gd", "res://states/game/game.gd", "res://classes/player_state_machine/idle_state.gd", "res://classes/player_state_machine/interact_state.gd", "res://classes/player_state_machine/move_state.gd", "res://objects/character/player/player.gd", "res://classes/player_state_machine/player_state_machine.gd", "res://autoloads/signals.gd"]
 selected_script="res://objects/character/player/player.gd"
 open_help=[]
 script_split_offset=140
