--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://objects/character/player/player.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/hud/", "res://components/escape_menu/game/", "res://classes/", "res://assets/textures/prototype/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://objects/characters/male_bot.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://objects/", "res://objects/characters/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/hud/", "res://components/escape_menu/game/", "res://classes/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -31,7 +31,7 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://objects/character/player/player.tscn")
 current_scene="res://objects/character/player/player.tscn"
 center_split_offset=-197
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 
 [ScriptEditor]
