--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=313
+dock_hsplit_2=312
 dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://classes/player_state_machine/base_state.gd", "res://states/game/game.gd", "res://classes/player_state_machine/idle_state.gd", "res://classes/player_state_machine/interact_state.gd", "res://classes/player_state_machine/move_state.gd", "res://objects/character/player/player.gd", "res://classes/player_state_machine/player_state_machine.gd", "res://autoloads/signals.gd"]
-selected_script="res://states/game/game.gd"
+selected_script="res://objects/character/player/player.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=75
