--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -161,16 +161,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 51,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 248,
-"scroll_position": 233.0,
-"selection": true,
-"selection_from_column": 9,
-"selection_from_line": 248,
-"selection_to_column": 27,
-"selection_to_line": 248,
+"row": 254,
+"scroll_position": 247.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -210,8 +206,8 @@ state={
 "column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 154,
-"scroll_position": 142.0,
+"row": 122,
+"scroll_position": 114.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
