--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -133,7 +133,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
@@ -161,10 +161,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 51,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 254,
+"row": 259,
 "scroll_position": 247.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 122,
-"scroll_position": 114.0,
+"row": 632,
+"scroll_position": 613.667,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -461,16 +461,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 17,
-"selection_to_column": 17,
-"selection_to_line": 17,
+"row": 9,
+"scroll_position": 5.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
