--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -63,6 +63,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://classes/player_state_machine/move_state.gd"
 }, {
+"base": &"Node",
+"class": &"PlayerAnimator",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/player_animator/player_animator.gd"
+}, {
 "base": &"Camera3D",
 "class": &"PlayerCamera",
 "icon": "",
