--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -94,4 +94,20 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://classes/pathfinding/priority_queue.gd"
+}, {
+"base": &"BaseState",
+"class": &"RifleAimIdleState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/player_state_machine/rifle_aim_idle_state.gd"
+}, {
+"base": &"BaseState",
+"class": &"RifleDownIdleState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/player_state_machine/rifle_down_idle_state.gd"
 }]
