--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -18,7 +18,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://assets/animations/rifle.glb")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/connected/", "res://objects/", "res://objects/characters/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/hud/", "res://components/escape_menu/game/", "res://classes/", "res://assets/", "res://assets/textures/prototype/orange/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/connected/", "res://objects/", "res://objects/characters/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/hud/", "res://components/escape_menu/game/", "res://classes/", "res://assets/", "res://assets/textures/prototype/orange/", "res://assets/animations/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,9 +28,9 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://objects/character/player/player.tscn")
-current_scene="res://objects/character/player/player.tscn"
-center_split_offset=-197
+open_scenes=PackedStringArray("res://objects/character/player/player.tscn", "res://objects/characters/female_bot.tscn")
+current_scene="res://objects/characters/female_bot.tscn"
+center_split_offset=-232
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 
