--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -10,15 +10,15 @@ dock_split_2=24
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=316
-dock_hsplit_3=-216
+dock_hsplit_3=-321
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/animations/rifle.glb")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/connected/", "res://objects/", "res://objects/characters/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/hud/", "res://components/escape_menu/game/", "res://classes/", "res://assets/", "res://assets/textures/prototype/orange/", "res://assets/animations/")
+dock_filesystem_selected_paths=PackedStringArray("res://components/hud/top_right_hud.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/connected/", "res://objects/", "res://objects/characters/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/hud/", "res://components/escape_menu/game/", "res://classes/", "res://assets/", "res://assets/textures/prototype/orange/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,15 +28,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://objects/character/player/player.tscn", "res://objects/characters/female_bot.tscn")
-current_scene="res://objects/characters/female_bot.tscn"
+open_scenes=PackedStringArray("res://objects/character/player/player.tscn")
+current_scene="res://objects/character/player/player.tscn"
 center_split_offset=-232
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://states/game/game.gd", "res://classes/player_state_machine/idle_state.gd", "res://classes/player_state_machine/move_state.gd", "res://objects/character/player/player.gd", "res://classes/player_animator/player_animator.gd", "res://classes/player_state_machine/player_state_machine.gd", "res://classes/player_state_machine/rifle_aim_idle_state.gd", "res://classes/player_state_machine/rifle_down_idle_state.gd"]
+open_scripts=["res://classes/player_state_machine/base_state.gd", "res://states/game/game.gd", "res://classes/player_state_machine/idle_state.gd", "res://classes/player_state_machine/move_state.gd", "res://objects/character/player/player.gd", "res://classes/player_animator/player_animator.gd", "res://classes/player_state_machine/player_state_machine.gd", "res://classes/player_state_machine/rifle_aim_idle_state.gd", "res://classes/player_state_machine/rifle_down_idle_state.gd", "res://components/hud/top_right_hud.gd"]
 selected_script="res://classes/player_animator/player_animator.gd"
 open_help=[]
 script_split_offset=172
