--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -203,16 +203,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 68,
-"scroll_position": 57.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 68,
-"selection_to_column": 20,
-"selection_to_line": 68,
+"row": 411,
+"scroll_position": 403.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -235,11 +231,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 81,
-"scroll_position": 66.0,
+"row": 72,
+"scroll_position": 60.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -511,11 +507,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 95,
-"scroll_position": 83.0,
+"row": 141,
+"scroll_position": 116.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -539,15 +535,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 89,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 21.0,
+"row": 46,
+"scroll_position": 35.0,
 "selection": true,
-"selection_from_column": 57,
-"selection_from_line": 27,
-"selection_to_column": 89,
-"selection_to_line": 27,
+"selection_from_column": 12,
+"selection_from_line": 46,
+"selection_to_column": 18,
+"selection_to_line": 46,
 "syntax_highlighter": "GDScript"
 }
