--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -71,6 +71,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://classes/player_animator/player_animator.gd"
 }, {
+"base": &"Node3D",
+"class": &"PlayerAudio",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/player_audio/player_audio.gd"
+}, {
 "base": &"Camera3D",
 "class": &"PlayerCamera",
 "icon": "",
